HBASE-19846 Fix findbugs and error-prone warnings in hbase-rest (branch-2)
Signed-off-by: tedyu <yuzhihong@gmail.com>